<resources>
    <string name="app_name">BaseCleanArchitecture</string>
    <string name="hint_email_id">Email ID</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_full_name">Full name</string>

    <string name="string_login">Login</string>
    <string name="string_info_another_login">Or, login with...</string>
    <string name="string_info_another_register">Or, register with email...</string>
    <string name="string_register">Register</string>
    <string name="string_info_register">"You don't have account ? "</string>
    <string name="string_full_name">Full name</string>
    <string name="string_info_login">"Already have an account ? "</string>
    <string name="string_forgot">Forgot ?</string>
    <string name="error_empty_email">Email not null</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_empty_password">Password not null</string>
    <string name="error_invalid_password"><![CDATA[Enter at least 9 characters]]></string>
    <string name="error_empty_full_name">Full name not null</string>
    <string name="error_empty_phone_number">Phone number not null</string>
    <string name="error_invalid_phone_number">Phone number must be 10 numbers and start by 0</string>
    <string name="message_error_login">Login failed. Please register.</string>
    <string name="message_success_login">Login successfully</string>
    <string name="message_success_register">Register successfully</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="logo_forgot_password">Please enter your email address,\nso we will send a reset link</string>
    <string name="reset">Reset</string>
    <string name="back">back</string>
    <string name="string_username">Create by KienTT</string>
    <string name="string_name_food">Bánh pizza</string>
    <string name="string_price_food">20.000đ</string>


    <string name="facebook_app_id">591318409135906</string>
    <string name="fb_login_protocol_scheme">fb591318409135906</string>
    <string name="facebook_client_token">9b5c52d5bfdd83e6d1a5d2294c712225</string>
    <string name="sign_out">Sign Out</string>
    <string name="take_camera">take camera</string>
    <string name="image_took">image took</string>

</resources>