<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.view.forgotpassword.ForgotPasswordFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutForgotPasswordFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/white"
            android:padding="@dimen/dimen_12dp"
            android:scaleType="centerInside"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back" />
        <TextView
            android:id="@+id/textView2"
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBack" />
        <TextView
            android:id="@+id/textView3"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_forgot_password"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailForgotPasswordLayout"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            app:endIconMode="custom"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/btnReset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconContentDescription="@string/hint_email_id"
            app:startIconDrawable="@drawable/ic_icon_email">

<<<<<<< Updated upstream
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/white"
        android:padding="@dimen/dimen_12dp"
        android:scaleType="centerInside"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/style_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <TextView
        android:id="@+id/textView3"
        style="@style/normal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_forgot_password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailForgotPasswordLayout"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconContentDescription="@string/hint_email_id"
        app:startIconDrawable="@drawable/ic_icon_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_email_id"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/_16sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnReset"
        style="@style/style_btn"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailForgotPasswordLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>=======
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_email_id"
                android:inputType="textEmailAddress"
                android:paddingVertical="@dimen/_16sdp" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnReset"
            style="@style/style_btn"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmailForgotPasswordLayout" />
        <ProgressBar
            android:id="@+id/pbForgotPassword"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
>>>>>>> Stashed changes
